# zakharov

./: .appveyor.yml  .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  Langmuir_read_data.m  Langmuir_v5c.cpp  Langmuir_v5c_oct2013.cpp  README.md  README.rst  Sim_v6_3.m  Sim_v6_3_Linux.m  appveyor.yml  perf.f90  zahk.cpp  zakh.cpp  zakh.f90
.github/workflows/: ci.yml
Matlab/: Langmuir_read_data.m  Langmuir_read_output.m  Langmuir_read_params.m  Sim_v6_3.m  Sim_v6_3_Linux.m
archive/: .travis.yml
cmake/: compilers.cmake
cmake/Modules/: FindCAF.cmake
